# riddle-rush

./: Anchor.toml  README.md  create_challenge.json  package-lock.json  package.json  tsconfig.json  uml.wsd
app/: Dockerfile  create_challenge.js  docker-compose.yml  index.html  package.json
app/src/: App.tsx  create_challenge.ts  index.css
app/src/anchor/: idl.json  riddle_rush.ts  setup.ts
app/src/components/: Logo.tsx  create_challenge.tsx  create_challenge_button.tsx  create_submission.tsx  main_page.tsx  submission_reveal.tsx
programs/riddle-rush/: Cargo.toml
programs/riddle-rush/src/: constants.rs  error.rs  lib.rs
programs/riddle-rush/src/instructions/: admin_close_challenge.rs  challenge_solution_reveal.rs  create_challenge.rs  create_submission.rs  expression.rs  initialize.rs  mod.rs  setter_claim.rs  setter_close_challenge.rs  submission_solution_reveal.rs  submitter_claim.rs
programs/riddle-rush/src/state/: challenge_account.rs  global_config.rs  mod.rs  submission_account.rs
scripts/: create-challenge.ts  initialize.ts  tsconfig.json
tests/: create_challenge.ts  helpers.ts  riddle-rush.ts
